<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/profilecolor"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="ABOUT US"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <com.fragdeluxestats.customviews.TextStyleView
                android:id="@+id/normalText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/about_info_1"
                android:textColor="@android:color/white"
                android:textStyle="normal"
                app:textType="normal" />

            <com.fragdeluxestats.customviews.TextStyleView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="WHAT DO WE OFFER ?"
                android:textColor="@android:color/white"
                app:textType="bold" />

            <com.fragdeluxestats.customviews.TextStyleView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/about_info_2"
                android:textColor="@android:color/white"
                app:textType="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/sideMenuButton"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/community_icon" />

                <com.fragdeluxestats.customviews.TextStyleView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="COMMUNITY"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    app:textType="bold" />

                <com.fragdeluxestats.customviews.TextStyleView
                    android:id="@+id/normalText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/about_info_item_1"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    app:textType="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/innovative_icon" />

                    <com.fragdeluxestats.customviews.TextStyleView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="INNOVATIVE"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        app:textType="bold" />

                    <com.fragdeluxestats.customviews.TextStyleView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/about_info_item_2"
                        android:textColor="@android:color/white"
                        android:textSize="10sp"
                        android:lines="2"
                        app:textType="normal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/server_icon" />

                    <com.fragdeluxestats.customviews.TextStyleView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Servers"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        app:textType="bold" />

                    <com.fragdeluxestats.customviews.TextStyleView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/about_info_itemx_3"
                        android:textColor="@android:color/white"
                        android:lines="2"
                        android:textSize="10sp"
                        app:textType="normal" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>